# reportmate-cli

./: .gitignore  COMMERCIAL-LICENSE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  client.rs  config.rs  main.rs  output.rs
