[package]
name = "reportmate"
version = "0.1.0"
edition = "2021"
description = "ReportMate admin CLI - query and manage your device fleet from the terminal"
license = "AGPL-3.0-or-later"
repository = "https://github.com/reportmate/reportmate-cli"
readme = "README.md"

[[bin]]
name = "reportmate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
comfy-table = "7"

[profile.release]
strip = true
lto = true
